Prepare for v1.0.3 release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@
 # The link to the remote base template. Note that the base template URL is versioned. Please check the base template for additional variables that need to be defined in GitLab.
 # Please subscribe to https://github.com/hashicorp/tfc-workflows-gitlab for updates.
 include:
-  remote: https://raw.githubusercontent.com/hashicorp/tfc-workflows-gitlab/v1.0.2/Base.gitlab-ci.yml
+  remote: https://raw.githubusercontent.com/hashicorp/tfc-workflows-gitlab/v1.0.3/Base.gitlab-ci.yml
 
 # Please refer: https://docs.gitlab.com/ee/ci/variables/
 # In order to use this template, the following CI/CD variables need to be defined in GitLab. The base remote template relies on these variables
@@ -12,8 +12,8 @@ include:
 # - TF_API_TOKEN: The token used to authenticate with Terraform Cloud.
 # - TF_CLOUD_ORGANIZATION: The name of the organization in Terraform Cloud. This variable is included in links that are shown in the output. The links might not work if this variable is masked.
 # - TF_WORKSPACE: The Workspace name that specifies where the run will be executed. This variable is included in links that are shown in the output. The links might not work if this variable is masked.
-# - GITLAB_API_TOKEN: The access token for the GitLab API. This needs to be set only if you intend to comment the terraform plan output on the merge request. 
-#         **NOTE**: We used the 'Developer' role for the access token. Any other role might work, or might not work and result in a 4XX status code. 
+# - GITLAB_API_TOKEN: The access token for the GitLab API. This needs to be set only if you intend to comment the terraform plan output on the merge request.
+#         **NOTE**: We used the 'Developer' role for the access token. Any other role might work, or might not work and result in a 4XX status code.
 #          Please refer: https://docs.gitlab.com/ee/user/project/settings/project_access_tokens.html
 # Additional optional variables:
 #   - TF_CLOUD_HOSTNAME :  Defaults to 'app.terraform.io'. The hostname of a Terraform Enterprise installation, if using Terraform Enterprise.
@@ -21,15 +21,15 @@ include:
 #   - TF_LOG: Defaults to 'OFF'. Logging level of the tfc CI tooling binary. We recommend to set this to INFO or DEBUG to troubleshoot any issues. DEBUG is more verbose.
 
 
-# You have the option to define your Terraform variables using the standard "TF_VAR_" prefix, either within this file or as CI/CD variables in the GitLab UI. 
+# You have the option to define your Terraform variables using the standard "TF_VAR_" prefix, either within this file or as CI/CD variables in the GitLab UI.
 # Please refer: https://developer.hashicorp.com/terraform/cli/config/environment-variables#tf_var_name
-# An example to do this inline, 
+# An example to do this inline,
 #   variables:
 #     TF_VAR_image_id: "\"ami-abc1\"" # NOTE: The escape characters are required to pass this safely downstream into terraform as a string
 #     TF_VAR_user_map: '{"1":{"name":"jason bourne","size":2}}'
 #     TF_VAR_availability_zone_names: '["us-east-1a","us-west-1c", "us-west-2b"]'
 
-# If you opt to define variables directly within the file, be aware that certain variables (e.g., TF_API_TOKEN, GITLAB_API_TOKEN, etc.) are sensitive and should be handled with caution. 
+# If you opt to define variables directly within the file, be aware that certain variables (e.g., TF_API_TOKEN, GITLAB_API_TOKEN, etc.) are sensitive and should be handled with caution.
 # Defining sensitive variables in this file is not recommended.
 variables:
   PROJECT_PIPELINE_NAME: "Default pipeline name"  # A default is not required.
@@ -46,7 +46,7 @@ workflow:
         PROJECT_PIPELINE_NAME: "$CI_DEFAULT_BRANCH pipeline"
         PLAN_ONLY: "false"
         SPECULATIVE: "false"
-    # Workflows on merge requests only do a plan run. 
+    # Workflows on merge requests only do a plan run.
     # Alternatively, you could trigger a plan run on any push, if: $CI_PIPELINE_SOURCE == "push"
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: always
@@ -61,9 +61,9 @@ upload_configuration:
 
 create_run:
   stage: "build"
+  extends: .tfc:create_run
   variables:
     MESSAGE: "LGTM"
-  extends: .tfc:create_run
 
 apply_run:
   stage: "deploy"
@@ -88,9 +88,31 @@ comment_on_merge_request:
   image: alpine/curl
   variables:
     MR_COMMENT: |
+      Run Status: "${run_status}"
       Plan: ${add} to add, ${change} to change, ${destroy} to destroy.
       [Terraform Cloud Plan](${run_link})
   script:
     - 'curl --fail-with-body --request POST --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/merge_requests/$CI_MERGE_REQUEST_IID/notes" --data-urlencode "body=$MR_COMMENT"'
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+
+on_failure_merge_request_comment:
+  stage: ".post"
+  image: alpine/curl
+  variables:
+    MR_COMMENT: |
+      CI Failure
+      Run Status: "${run_status}"
+      Plan: ${add} to add, ${change} to change, ${destroy} to destroy.
+      [Terraform Cloud Plan](${run_link})
+  script:
+    - 'curl --fail-with-body --request POST --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/merge_requests/$CI_MERGE_REQUEST_IID/notes" --data-urlencode "body=$MR_COMMENT"'
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+  when: on_failure
+
+check_run_status:
+  stage: ".post"
+  script:
+    - echo "$run_status"
+    - if [ "$run_status" != "planned_and_finished" ]; then exit 1; fi;
