--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,7 +114,7 @@ on_failure_merge_request_comment:
   when: on_failure
 
 # Terraform Cloud Run may not have errored, but could possibly have an undesirable status
-# Dpending on threshold, can modify or remove for your use case
+# Depending on threshold, can modify or remove for your use case
 check_run_status:
   stage: ".post"
   script:
