--- a/Base.gitlab-ci.yml
+++ b/Base.gitlab-ci.yml
@@ -69,9 +69,9 @@ default:
   variables:
     CONFIGURATION_VERSION_ID: $configuration_version_id
     MESSAGE: "Base template message. Override this"
-    PLAN_ONLY: false
-    SAVE_PLAN: false
-    IS_DESTROY: false
+    PLAN_ONLY: "false"
+    SAVE_PLAN: "false"
+    IS_DESTROY: "false"
   script:
     - tfci -hostname=$TF_CLOUD_HOSTNAME  -token=$TF_API_TOKEN -organization=$TF_CLOUD_ORGANIZATION run create -workspace=$TF_WORKSPACE -configuration_version=$CONFIGURATION_VERSION_ID -message=$MESSAGE -plan-only=$PLAN_ONLY -save-plan=$SAVE_PLAN -is-destroy=$IS_DESTROY
   artifacts:
