--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ include:
 # Please refer: https://docs.gitlab.com/ee/ci/variables/
 # In order to use this template, the following CI/CD variables need to be defined in GitLab. The base remote template relies on these variables
 # Please refer: https://docs.gitlab.com/ee/ci/variables/
-# - TF_API_TOKEN: The token used to authenticate with Terraform Cloud.
-# - TF_CLOUD_ORGANIZATION: The name of the organization in Terraform Cloud. This variable is included in links that are shown in the output. The links might not work if this variable is masked.
+# - TF_API_TOKEN: The token used to authenticate with HCP Terraform.
+# - TF_CLOUD_ORGANIZATION: The name of the organization in HCP Terraform. This variable is included in links that are shown in the output. The links might not work if this variable is masked.
 # - TF_WORKSPACE: The Workspace name that specifies where the run will be executed. This variable is included in links that are shown in the output. The links might not work if this variable is masked.
 # - GITLAB_API_TOKEN: The access token for the GitLab API. This needs to be set only if you intend to comment the terraform plan output on the merge request.
 #         **NOTE**: We used the 'Developer' role for the access token. Any other role might work, or might not work and result in a 4XX status code.
@@ -94,14 +94,14 @@ comment_on_merge_request:
     MR_COMMENT: |
       Run Status: "${run_status}"
       Plan: ${add} to add, ${change} to change, ${destroy} to destroy.
-      [Terraform Cloud Plan](${run_link})
+      [HCP Terraform Plan](${run_link})
   script:
     - 'curl --fail-with-body --request POST --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/merge_requests/$CI_MERGE_REQUEST_IID/notes" --data-urlencode "body=$MR_COMMENT"'
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
 
 # Similar to comment_on_merge_request job, however this will only run if a prior job has failed
-# Will surface a merge request comment, indicating a possible Terraform Cloud Run failure
+# Will surface a merge request comment, indicating a possible HCP Terraform Run failure
 on_failure_merge_request_comment:
   stage: ".post"
   image: alpine/curl
@@ -110,14 +110,14 @@ on_failure_merge_request_comment:
       CI Failure
       Run Status: "${run_status}"
       Plan: ${add} to add, ${change} to change, ${destroy} to destroy.
-      [Terraform Cloud Plan](${run_link})
+      [HCP Terraform Plan](${run_link})
   script:
     - 'curl --fail-with-body --request POST --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/merge_requests/$CI_MERGE_REQUEST_IID/notes" --data-urlencode "body=$MR_COMMENT"'
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
   when: on_failure
 
-# Terraform Cloud Run may not have errored, but could possibly have an undesirable status
+# HCP Terraform Run may not have errored, but could possibly have an undesirable status
 # Depending on threshold, can modify or remove for your use case
 check_run_status:
   stage: ".post"
